layout fix (still broken on mobile) + auto navbar move on scroll

--- a/app/javascript/entrypoints/application.css
+++ b/app/javascript/entrypoints/application.css
@@ -88,6 +88,10 @@ body {
   background-color: var(--color-background);
 }
 
+#app {
+  height: 100%;
+}
+
 .material-icon--sm {
   font-size: 1.2em !important;
 }
